# archives-nz-rosetta-csv-ingest

./: .codespellignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  args.cfg  import-generator.py  import_generator.py  pyproject.toml
.github/workflows/: release.yml  unit-tests-all.yml
libs/: RosettaCSVGenerator.py
requirements/: local.txt
rosetta-configs/: linz-rosetta-csv-mapping.cfg  new-rosetta-csv-mapping.cfg  rosetta-csv-mapping-events.cfg  rosetta-csv-mapping.cfg
rosetta-schemas/: rosetta-csv-validation-schema-linz.json  rosetta-csv-validation-schema-with-events-anz.json
src/anz_rosetta_csv/: ImportSheetGenerator.py  ProvenanceCSVHandlerClass.py  RosettaCSVGenerator.py  anz_rosetta_csv.py  droidcsvhandlerclass.py  import_sheet_generator.py  provenance_csv_handler_class.py  rosetta_csv_generator.py  rosetta_csv_sections_class.py  rosettacsvsectionsclass.py
src/anz_rosetta_csv/JsonTableSchema/: JsonTableSchema.py
src/anz_rosetta_csv/json_table_schema/: json_table_schema.py
tests/: test_import_generator.py  test_original_generator_tests.py
